After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701044 - Fix use of uninitialized memory and leak
Fix use of uninitialized memory and leak
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-05-26 12:44 UTC by Stef Walter
Modified: 2013-05-26 18:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
page: Fix use of uninitialized memory and leak (1006 bytes, patch)
2013-05-26 12:45 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2013-05-26 12:44:27 UTC
In the code path when loading a UI file fails there's bad memory usage and leak.
Comment 1 Stef Walter 2013-05-26 12:45:28 UTC
Created attachment 245325 [details] [review]
page: Fix use of uninitialized memory and leak
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-05-26 15:28:00 UTC
Review of attachment 245325 [details] [review]:

OK.
Comment 3 Stef Walter 2013-05-26 18:43:59 UTC
Attachment 245325 [details] pushed as d63f010 - page: Fix use of uninitialized memory and leak