page: Fix use of uninitialized memory and leak

https://bugzilla.gnome.org/show_bug.cgi?id=701044